fix anchor when redirecting to All recipes page; reduce the white spacing after the Add recipe icon on home page; implement 404 error redirection

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10670,7 +10670,7 @@ p {
 }
 
 .page-section {
-  padding: 5.5rem 0;
+  padding: 5rem 0;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
@@ -10903,7 +10903,7 @@ header.masthead .masthead-heading {
   background-image: url("../img/header/others-header-bg.jpg");
 }
 
-/* Recipe Form */
+/* Recipe form */
 .form-group {
   font-size: 1.125rem;
   font-weight: 500;
@@ -10921,7 +10921,7 @@ header.masthead .masthead-heading {
   margin: 0.5rem;
 }
 
-/* Recipe Cards */
+/* Recipe cards */
 #recipeCards .row {
   margin-top: 4rem;
 }
@@ -10931,4 +10931,9 @@ header.masthead .masthead-heading {
   text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+/* 404 error page */
+#pageNotFoundMessage {
+  padding: 7rem 0;
 }
